# UAO-Neumonia

./: .gitignore  LICENSE  launch_uao_neumonia.sh  main.py  pyproject.toml  requirements.txt
data/processed/: run_docker_xming.sh
data/raw/: launch_uao_neumonia.sh
docker/: .dockerignore  Dockerfile  README.md  Xming_Setup_Guide.md
docs/: LICENSE  README.md
notebooks/: lectura_Dicom.ipynb
reports/: Reporte_DockerHub_Warp.txt  Reporte_Docker_Warp.txt  historial.csv
src/data/: detector_neumonia.py  grad_cam.py  integrator.py  load_model.py  preprocess_img.py  read_img.py
tests/: resultados_stevens_preprocess_img.html  resultados_stevens_preprocess_img.xml  resultados_stevens_read_img.html  resultados_stevens_read_img.xml  test_docker_no_gui.py  test_preprocess_img_stevens.py  test_read_img_stevens.py
