[project]
name = "uao-neumonia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "img2pdf",
    "matplotlib",
    "numpy",
    "opencv-python-headless",
    "pandas",
    "pillow",
    "plotly",
    "pyautogui",
    "pydicom",
    "pytest",
    "python-xlib",
    "scikit-learn",
    "scipy",
    "seaborn",
    "tensorflow",
    "tkcap",
]
